--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "test": "mocha tests --recursive"
   },
   "dependencies": {
-    "eslint-config-prettier": "^4.0.0",
-    "prettier-linter-helpers": "~1.0.0",
-    "prettierx": "~0.4.1"
+    "eslint-config-prettier": "^4.1.0",
+    "prettier-linter-helpers": "^1.0.0",
+    "prettierx": "^0.6.0"
   },
   "devDependencies": {
     "@types/eslint": "^4.16.6",
@@ -51,7 +51,7 @@
     "typescript": "^3.3.3"
   },
   "peerDependencies": {
-    "eslint": ">=5.12"
+    "eslint": "^5.12.0"
   },
   "license": "MIT"
 }
