--- a/prettier/package.json
+++ b/prettier/package.json
@@ -8,7 +8,7 @@
     "prettier": "../prettierx/bin-prettierx.js"
   },
   "peerDependencies": {
-    "prettierx": ">=0.4.1"
+    "prettierx": "^0.6.0"
   },
   "license": "MIT"
 }
