--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-prettierx",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "Format your code with ESLint using Prettierx, with presets for Prettier and StandardJS",
   "keywords": [
     "eslint",
@@ -15,7 +15,7 @@
   "author": "aMarCruz",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=6.24"
+    "node": ">=8"
   },
   "bin": {
     "list-eslint-config": "./bin/list-eslint-config.js"
@@ -35,20 +35,21 @@
     "test": "mocha tests --recursive"
   },
   "dependencies": {
-    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-prettier": "^5.0.0",
     "prettier-linter-helpers": "^1.0.0",
-    "prettierx": "^0.6.0"
+    "prettierx": "^0.7.0"
   },
   "devDependencies": {
-    "@types/eslint": "^4.16.6",
-    "@types/node": "^11.9.4",
+    "@types/eslint": "^4.16.0",
+    "@types/node": "^12.0.0",
     "@types/prettier": "^1.16.1",
-    "@typescript-eslint/eslint-plugin": "^1.3.0",
-    "eslint": "5.12.0",
-    "eslint-config-standardize": "^0.3.2",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "eslint": "5.x",
+    "eslint-config-standardize": "^0.3.7",
     "mocha": "^5.2.0",
     "prettier": "./prettier",
-    "typescript": "^3.3.3"
+    "typescript": "^3.5.0"
   },
   "peerDependencies": {
     "eslint": "^5.12.0"
