--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-prettierx",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Format your code with ESLint using Prettierx, with presets for Prettier and StandardJS",
   "keywords": [
     "eslint",
@@ -12,10 +12,10 @@
     "standardx",
     "formatter"
   ],
-  "author": "aMarCruz",
+  "author": "aMarCruz <amarcruzbox-git@yahoo.com>",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=8"
+    "node": ">=8.0"
   },
   "bin": {
     "list-eslint-config": "./bin/list-eslint-config.js"
@@ -32,27 +32,26 @@
     "type": "git"
   },
   "scripts": {
-    "test": "mocha tests --recursive"
+    "test": "eslint -f unix --ext .js,.ts,.tsx bin lib prettier && cd .. && echo Test passed."
   },
   "dependencies": {
-    "eslint-config-prettier": "^5.0.0",
+    "eslint-config-prettier": "^6.5.0",
     "prettier-linter-helpers": "^1.0.0",
-    "prettierx": "^0.7.0"
+    "prettierx": "^0.8.0"
   },
   "devDependencies": {
-    "@types/eslint": "^4.16.0",
-    "@types/node": "^12.0.0",
-    "@types/prettier": "^1.16.1",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
-    "eslint": "5.x",
-    "eslint-config-standardize": "^0.3.7",
-    "mocha": "^5.2.0",
-    "prettier": "./prettier",
-    "typescript": "^3.5.0"
+    "@types/eslint": "^6.1.3",
+    "@types/node": "^12.12.3",
+    "@types/prettier": "^1.18.3",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
+    "eslint": "6.0.1",
+    "eslint-config-standardize": "^0.4.2",
+    "prettier": "file:./prettier",
+    "typescript": "^3.6.4"
   },
   "peerDependencies": {
-    "eslint": "^5.12.0"
+    "eslint": ">=6.0.1 <7.0.0"
   },
   "license": "MIT"
 }
