--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-prettierx",
-  "version": "0.5.0",
+  "version": "0.10.0",
   "description": "Format your code with ESLint using Prettierx, with presets for Prettier and StandardJS",
   "keywords": [
     "eslint",
@@ -35,23 +35,22 @@
     "test": "eslint -f unix --ext .js,.ts,.tsx bin lib prettier && cd .. && echo Test passed."
   },
   "dependencies": {
-    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-prettier": "~6.7.0",
     "prettier-linter-helpers": "^1.0.0",
-    "prettierx": "^0.8.0"
+    "prettierx": "~0.10.0"
   },
   "devDependencies": {
     "@types/eslint": "^6.1.3",
-    "@types/node": "^12.12.3",
-    "@types/prettier": "^1.18.3",
-    "@typescript-eslint/eslint-plugin": "^2.6.0",
-    "@typescript-eslint/parser": "^2.6.0",
-    "eslint": "6.0.1",
-    "eslint-config-standardize": "^0.4.2",
-    "prettier": "file:./prettier",
-    "typescript": "^3.6.4"
+    "@types/node": "^12.12.11",
+    "@types/prettier": "^1.18.4",
+    "@typescript-eslint/eslint-plugin": "~2.8.0",
+    "@typescript-eslint/parser": "~2.8.0",
+    "eslint": "6.2.2",
+    "eslint-config-standardize": "~0.5.0",
+    "typescript": "~3.7.2"
   },
   "peerDependencies": {
-    "eslint": ">=6.0.1 <7.0.0"
+    "eslint": ">=6.2.2"
   },
   "license": "MIT"
 }
