--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,10 @@
 {
-  "eslint.autoFixOnSave": true,
   "eslint.packageManager": "yarn",
   "eslint.validate": [
     "javascript",
     "javascriptreact",
-    { "language": "typescript", "autoFix": true },
-    { "language": "typescriptreact", "autoFix": true }
+    "typescript",
+    "typescriptreact"
   ],
   "typescript.disableAutomaticTypeAcquisition": true,
   "typescript.format.insertSpaceAfterConstructor": true,
@@ -14,6 +13,9 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "javascript.validate.enable": false,
   "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "[markdown]": {
     "editor.formatOnSave": true
   },
