--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-prettierx",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "Format your code with ESLint using Prettierx, with presets for Prettier and StandardJS",
   "keywords": [
     "eslint",
@@ -15,7 +15,7 @@
   "author": "aMarCruz <amarcruzbox-git@yahoo.com>",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=8.0"
+    "node": "^10.12.0 || >=12.0.0"
   },
   "bin": {
     "list-eslint-config": "./bin/list-eslint-config.js"
@@ -35,22 +35,23 @@
     "test": "eslint -f unix --ext .js,.ts,.tsx bin lib prettier && cd .. && echo Test passed."
   },
   "dependencies": {
-    "eslint-config-prettier": "~6.7.0",
-    "prettier-linter-helpers": "^1.0.0",
-    "prettierx": "~0.10.0"
+    "eslint-config-prettier": "~6.9.0",
+    "eslint-find-rules": "^3.4.0",
+    "prettier-linter-helpers": "~1.0.0",
+    "prettierx": "~0.11.0"
   },
   "devDependencies": {
-    "@types/eslint": "^6.1.3",
-    "@types/node": "^12.12.11",
-    "@types/prettier": "^1.18.4",
-    "@typescript-eslint/eslint-plugin": "~2.8.0",
-    "@typescript-eslint/parser": "~2.8.0",
-    "eslint": "6.2.2",
+    "@types/eslint": "~6.1.3",
+    "@types/node": "~13.1.8",
+    "@types/prettier": "~1.19.0",
+    "@typescript-eslint/eslint-plugin": "~2.18.0",
+    "@typescript-eslint/parser": "~2.18.0",
+    "eslint": "~6.8.0",
     "eslint-config-standardize": "~0.5.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.5"
   },
   "peerDependencies": {
-    "eslint": ">=6.2.2"
+    "eslint": ">=6.7.2"
   },
   "license": "MIT"
 }
