--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-prettierx",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "description": "Format your code with ESLint using Prettierx, with presets for Prettier and StandardJS",
   "keywords": [
     "eslint",
@@ -32,25 +32,25 @@
     "type": "git"
   },
   "scripts": {
-    "test": "eslint -f unix --ext .js,.ts,.tsx bin lib prettier && cd .. && echo Test passed."
+    "test": "eslint -f unix --ext .js,.ts,.tsx bin lib && cd .. && echo Test passed."
   },
   "dependencies": {
-    "eslint-config-prettier": "~6.9.0",
+    "eslint-config-prettier": "~6.11.0",
     "prettier-linter-helpers": "~1.0.0",
-    "prettierx": "~0.11.0"
+    "prettierx": "~0.12.0"
   },
   "devDependencies": {
-    "@types/eslint": "~6.1.3",
-    "@types/node": "~13.1.8",
-    "@types/prettier": "~1.19.0",
-    "@typescript-eslint/eslint-plugin": "~2.18.0",
-    "@typescript-eslint/parser": "~2.18.0",
+    "@types/eslint": "~6.8.1",
+    "@types/node": "~14.0.1",
+    "@types/prettier": "~2.0.0",
+    "@typescript-eslint/eslint-plugin": "~2.33.0",
+    "@typescript-eslint/parser": "~2.33.0",
     "eslint": "~6.8.0",
-    "eslint-config-standardize": "~0.5.0",
-    "typescript": "~3.7.5"
+    "eslint-config-standardize": "~0.6.1",
+    "typescript": "~3.9.2"
   },
   "peerDependencies": {
-    "eslint": ">=6.7.2"
+    "eslint": ">=6.8.0"
   },
   "license": "MIT"
 }
