--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-prettierx",
-  "version": "0.12.0",
+  "version": "0.12.1",
   "description": "Format your code with ESLint using Prettierx, with presets for Prettier and StandardJS",
   "keywords": [
     "eslint",
@@ -15,7 +15,7 @@
   "author": "aMarCruz <amarcruzbox-git@yahoo.com>",
   "main": "lib/index.js",
   "engines": {
-    "node": "^10.12.0 || >=12.0.0"
+    "node": "^10.13.0 || >=12.0.0"
   },
   "bin": {
     "list-eslint-config": "./bin/list-eslint-config.js"
@@ -37,20 +37,21 @@
   "dependencies": {
     "eslint-config-prettier": "~6.11.0",
     "prettier-linter-helpers": "~1.0.0",
-    "prettierx": "~0.12.0"
+    "prettierx": "^0.12.0"
   },
   "devDependencies": {
     "@types/eslint": "~6.8.1",
-    "@types/node": "~14.0.1",
-    "@types/prettier": "~2.0.0",
-    "@typescript-eslint/eslint-plugin": "~2.33.0",
-    "@typescript-eslint/parser": "~2.33.0",
+    "@types/node": "~14.0.5",
+    "@types/prettier": "<2.0.0",
+    "@typescript-eslint/eslint-plugin": "~2.34.0",
+    "@typescript-eslint/parser": "~2.34.0",
     "eslint": "~6.8.0",
     "eslint-config-standardize": "~0.6.1",
-    "typescript": "~3.9.2"
+    "typescript": "~3.9.3"
   },
   "peerDependencies": {
-    "eslint": ">=6.8.0"
+    "eslint": ">=6.8.0",
+    "typescript": ">=3.2.0"
   },
   "license": "MIT"
 }
