--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-prettierx",
-  "version": "0.12.1",
+  "version": "0.13.1",
   "description": "Format your code with ESLint using Prettierx, with presets for Prettier and StandardJS",
   "keywords": [
     "eslint",
@@ -37,21 +37,21 @@
   "dependencies": {
     "eslint-config-prettier": "~6.11.0",
     "prettier-linter-helpers": "~1.0.0",
-    "prettierx": "^0.12.0"
+    "prettierx": "~0.13.1"
   },
   "devDependencies": {
-    "@types/eslint": "~6.8.1",
-    "@types/node": "~14.0.5",
-    "@types/prettier": "<2.0.0",
-    "@typescript-eslint/eslint-plugin": "~2.34.0",
-    "@typescript-eslint/parser": "~2.34.0",
-    "eslint": "~6.8.0",
-    "eslint-config-standardize": "~0.6.1",
-    "typescript": "~3.9.3"
+    "@types/eslint": "~7.2.0",
+    "@types/node": "~14.0.27",
+    "@types/prettier": "~2.0.2",
+    "@typescript-eslint/eslint-plugin": "~3.9.0",
+    "@typescript-eslint/parser": "~3.9.0",
+    "eslint": "~7.6.0",
+    "eslint-config-standardize": "~0.7.0",
+    "typescript": "~3.9.7"
   },
   "peerDependencies": {
-    "eslint": ">=6.8.0",
-    "typescript": ">=3.2.0"
+    "eslint": ">=7.2.0",
+    "typescript": ">=3.8.0"
   },
   "license": "MIT"
 }
