--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,27 +1,13 @@
 {
-  "alignObjectProperties": false,
-  "alignTernaryLines": false,
+  "offsetTernaryExpressions": true,
   "arrowParens": "avoid",
   "bracketSpacing": true,
-  "breakBeforeElse": false,
-  "breakLongMethodChains": true,
-  "endOfLine": "lf",
   "generatorStarSpacing": true,
-  "htmlWhitespaceSensitivity": "css",
-  "indentChains": true,
-  "insertPragma": false,
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": false,
-  "parenSpacing": false,
   "printWidth": 92,
-  "proseWrap": "preserve",
   "quoteProps": "consistent",
-  "requirePragma": false,
   "semi": false,
   "singleQuote": true,
   "spaceBeforeFunctionParen": true,
-  "tabWidth": 2,
-  "trailingComma": "es5",
-  "useTabs": false,
+  "htmlVoidTags": true,
   "yieldStarSpacing": true
 }
