--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,12 +1,14 @@
 {
-  "offsetTernaryExpressions": true,
   "arrowParens": "avoid",
-  "bracketSpacing": true,
+  "endOfLine": "lf",
   "generatorStarSpacing": true,
+  "offsetTernaryExpressions": true,
   "printWidth": 92,
   "quoteProps": "consistent",
   "semi": false,
   "singleQuote": true,
   "spaceBeforeFunctionParen": true,
+  "tabWidth": 2,
+  "useTabs": false,
   "yieldStarSpacing": true
 }
