--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,10 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{js,jsx,ts,tsx,esm}]
+quote_type = single
+max_line_length = 92
+
 [*.md]
 trim_trailing_whitespace = false
 
