--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "typescript": "~4.2.4"
   },
   "peerDependencies": {
-    "eslint": "^7.0.0"
+    "eslint": ">=7.0.0"
   },
   "license": "MIT"
 }
